--- a/app/views/families/edit.js.erb
+++ b/app/views/families/edit.js.erb
@@ -1,2 +1,2 @@
 $("#user-results").html("<%= escape_javascript(render 'edit') %>");
-$("#user-results").show();
+$("#user-results").hide().slideDown();
