--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html.login
   %head
-    %title  Maple Leaf - Family
+    %title  ML Family
     <!--[if IE]><script scr="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script><![endif]-->
     = stylesheet_link_tag "application", :media => "all"
     = stylesheet_link_tag "//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css"
