--- a/app/views/users/new.js.erb
+++ b/app/views/users/new.js.erb
@@ -1,2 +1,2 @@
 $("#user-results").html("<%= escape_javascript(render 'new') %>");
-$("#user-results").show();
+$("#user-results").hide().slideDown();
