--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -14,6 +14,9 @@
   };
 
 .side-nav
+  -unless @user.enabled
+    .alert.alert-danger{align: "center"}
+      %h4= t("account_disabled")
   .panel.panel-default
     .panel-heading
       %h4
@@ -23,32 +26,34 @@
               =link_to content_tag(:i, nil, class: "fa fa-cog fa-1x"), edit_user_path(@user), remote: true
         = link_to @user.name, user_path(@user)
     .panel-body.visible-xs
-      %table.table.table-hover
-        %thead
-          %tr
-            %th= t('social_media')
-            %th{style: "width:32px;", align: 'right'}= link_to content_tag(:i, nil, class: "fa fa-cog fa-1x"), social_medium_users_path(id: @user.id), remote: true
-        %tbody
-          -if @user.social_medium.any?
+      -if current_user.enabled
+        %table.table.table-hover
+          %thead
             %tr
-              %td{colspan: '2'}
-                -@user.social_medium.each do |feed|
-                  =link_to content_tag(:i, nil, class: "fa fa-#{feed.css_class} fa-3x"), user_social_medium_path(@user, feed, {type: 'recent'}), remote: true, onclick: "loadingSocialMedia();"
-              %td{style: "width:32px;"}
+              %th= t('social_media')
+              %th{style: "width:32px;"}= link_to content_tag(:i, nil, class: "fa fa-cog fa-1x"), social_medium_users_path(id: @user.id), remote: true
+          %tbody
+            -if @user.social_medium.any?
+              %tr
+                %td{colspan: '2'}
+                  -@user.social_medium.each do |feed|
+                    =link_to content_tag(:i, nil, class: "fa fa-#{feed.css_class} fa-3x"), user_social_medium_path(@user, feed, {type: 'recent'}), remote: true, onclick: "loadingSocialMedia();"
+                %td
 
     .panel-body.hidden-xs
       %div{align: "center"}= link_to image_tag(gravatar_for(@user), class: "img-rounded"), user_path(@user)
-      %table.table.table-hover
-        %thead
-          %tr
-            %th= t('social_media')
-            %th= link_to content_tag(:i, nil, class: "fa fa-cog fa-1x"), social_medium_users_path(id: @user.id), remote: true
-        %tbody
-          -if @user.social_medium.any?
-            -@user.social_medium.each do |feed|
-              %tr
-                %td= link_to content_tag(:i, " #{feed.type_tag}", class: "fa fa-#{feed.css_class} fa-2x"), user_social_medium_path(@user, feed, {type: 'recent'}), remote: true, onclick: "loadingSocialMedia();"
-                %td{style: "width:32px;"}= link_to content_tag(:i,nil, class: "fa fa-remove fa-1x"), user_social_medium_path(@user, feed), method: :delete
+      -if current_user.enabled
+        %table.table.table-hover
+          %thead
+            %tr
+              %th= t('social_media')
+              %th= link_to content_tag(:i, nil, class: "fa fa-cog fa-1x"), social_medium_users_path(id: @user.id), remote: true
+          %tbody
+            -if @user.social_medium.any?
+              -@user.social_medium.each do |feed|
+                %tr
+                  %td= link_to content_tag(:i, " #{feed.type_tag}", class: "fa fa-#{feed.css_class} fa-2x"), user_social_medium_path(@user, feed, {type: 'recent'}), remote: true, onclick: "loadingSocialMedia();"
+                  %td{style: "width:32px;"}= link_to content_tag(:i,nil, class: "fa fa-remove fa-1x"), user_social_medium_path(@user, feed), method: :delete, data: {confirm: t('are_you_sure')}
 
 .results-nav
   #loading{style: 'display:none;', align: 'center'}
@@ -57,11 +62,18 @@
         %i.fa.fa-circle-o-notch.fa-spin
 
   #user-results
-    -if @user.social_medium_stat
+    -if current_user.enabled
+      -if @user.social_medium_stat
+        .panel.panel-default
+          .panel-heading
+            %h4= t("social_media_activity")
+          .panel-body
+            - @user.social_medium_stat.format_data.each do |k,v|
+              = content_tag(:i, " #{k.titleize}", class: "fa fa-#{k} fa-2x")
+              = column_chart v, height: "150px", colors: ["#325d88","#93c54b","#f47c3c"], library: {legend: {labels: {boxWidth: 12}}, scales: {yAxes: [{ticks: {stepSize: 1}}]}}
+    -else
       .panel.panel-default
         .panel-heading
-          %h4= t("social_media_activity")
+          %h4= t("account_disabled")
         .panel-body
-          - @user.social_medium_stat.format_data.each do |k,v|
-            = content_tag(:i, " #{k.titleize}", class: "fa fa-#{k} fa-2x")
-            = column_chart v, height: "150px", colors: ["#325d88","#93c54b","#f47c3c"], library: {legend: {labels: {boxWidth: 12}}, scales: {yAxes: [{ticks: {stepSize: 1}}]}}
+          =t(@user.status, default: t('disabled_by_admin'))
