--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -6,4 +6,4 @@
   %p{align: 'center'}
     .btn-group.btn-group-justified
       =link_to t('sign_in'), login_path, remote: true, class: "btn btn-primary"
-      =link_to t('create_account'), signup_path, remote: true, class: "btn btn-success"
+      =link_to t('sign_up'), signup_path, remote: true, class: "btn btn-success"
