--- a/app/views/users/social_medium.js.erb
+++ b/app/views/users/social_medium.js.erb
@@ -1,2 +1,1 @@
-$("#inner-modal").html("<%= escape_javascript(render 'social_medium') %>");
-$("#modal").modal("show");
+$("#user-results").html("<%= escape_javascript(render 'social_medium') %>");
