--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -31,7 +31,9 @@
           %thead
             %tr
               %th= t('social_media')
-              %th{style: "width:32px;"}= link_to content_tag(:i, nil, class: "fa fa-cog fa-1x"), social_medium_users_path(id: @user.id), remote: true
+              %th{style: "width:32px;"}
+                -if @user == current_user
+                  = link_to content_tag(:i, nil, class: "fa fa-cog fa-1x"), social_medium_users_path(id: @user.id), remote: true
           %tbody
             -if @user.social_medium.any?
               %tr
