--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -49,7 +49,9 @@
           %thead
             %tr
               %th= t('social_media')
-              %th= link_to content_tag(:i, nil, class: "fa fa-cog fa-1x"), social_medium_users_path(id: @user.id), remote: true
+              %th
+                -if @user == current_user
+                  = link_to content_tag(:i, nil, class: "fa fa-cog fa-1x"), social_medium_users_path(id: @user.id), remote: true
           %tbody
             -if @user.social_medium.any?
               -@user.social_medium.each do |feed|
