--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -37,7 +37,9 @@
           %span.icon-bar
           %span.icon-bar
           %span.icon-bar
-        %a.navbar-brand{href: ""}= 'ML Family'
+        %a.navbar-brand{href: ""}
+          = image_tag("/assets/leaf_vectorized.png", size: "40x40", style: "margin-top:-10px;")
+          = t("family")
       .collapse.navbar-collapse
         %ul.nav.navbar-nav.navbar-right{style: "margin-right:20px;"}
           -if current_user.email == ENV['ADMIN']
