--- a/app/views/layouts/login.html.haml
+++ b/app/views/layouts/login.html.haml
@@ -11,7 +11,9 @@
   %body
     %nav.navbar.navbar-default.navbar-fixed-top{:role => "navigation"}
       .navbar-header
-        %a.navbar-brand ML Family
+        %a.navbar-brand
+          = image_tag("/assets/leaf_vectorized.png", size: "40x40", style: "margin-top:-10px;")
+          = t("family")
     .container
       = yield
 
