--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,9 +1,11 @@
 #user-results
-.jumbotron
-  %h1 Maple Leaf Family
+.jumbotron{align: 'center'}
+  %h1
+    = image_tag("/assets/leaf_vectorized.png", size: "120x120", style: "margin-top:-10px;")
+    = t("family")
   %p
     .lead= t('about_us')
-  %p{align: 'center'}
-    .btn-group.btn-group-justified
+  %p
+    .btn-group.btn-group-justified{style: 'width:200px;'}
       =link_to t('sign_in'), login_path, remote: true, class: "btn btn-primary"
       =link_to t('sign_up'), signup_path, remote: true, class: "btn btn-success"
