--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,14 +10,12 @@
     %link{:href => "/assets/font-awesome/css/font-awesome.min.css", :rel => "stylesheet"}
     %link{:href => "//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css", :rel => "stylesheet"}
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}
-    %link{:href => "/apple-touch-icon-ipad-76x76.png", :rel => "apple-touch-icon", :sizes => "76x76"}
-    %link{:href => "/apple-touch-icon-iphone-60x60.png", :rel => "apple-touch-icon", :sizes => "60x60"}
-    %link{:href => "/apple-touch-icon-iphone-retina-120x120.png", :rel => "apple-touch-icon", :sizes => "120x120"}
-    %link{:href => "/apple-touch-icon-ipad-retina-152x152.png", :rel => "apple-touch-icon", :sizes => "152x152"}
-    %link{:href => "/android-icon-192x192.png", :rel => "icon", :sizes => "192x192", :type => "image/png"}
-    %meta{:content => "#ffffff", :name => "msapplication-TileColor"}
-    %meta{:content => "/assets/ms-icon-144x144.png", :name => "msapplication-TileImage"}
-    %meta{:content => "#ffffff", :name => "theme-color"}
+    %link{:href => "/apple-touch-icon.png", :rel => "apple-touch-icon", :sizes => "180x180"}/
+    %link{:href => "/favicon-32x32.png", :rel => "icon", :sizes => "32x32", :type => "image/png"}/
+    %link{:href => "/favicon-16x16.png", :rel => "icon", :sizes => "16x16", :type => "image/png"}/
+    %link{:href => "/manifest.json", :rel => "manifest"}/
+    %link{:color => "#5bbad5", :href => "/safari-pinned-tab.svg", :rel => "mask-icon"}/
+    %meta{:content => "#ffffff", :name => "theme-color"}/
     %meta{:content => "yes", :name => "apple-mobile-web-app-capable"}
       :javascript
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
