--- a/app/views/layouts/my_family.html.haml
+++ b/app/views/layouts/my_family.html.haml
@@ -7,7 +7,14 @@
     = stylesheet_link_tag "//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css"
     = javascript_include_tag "application"
     = csrf_meta_tags
+    %link{:href => "/apple-touch-icon.png", :rel => "apple-touch-icon", :sizes => "180x180"}/
+    %link{:href => "/favicon-32x32.png", :rel => "icon", :sizes => "32x32", :type => "image/png"}/
+    %link{:href => "/favicon-16x16.png", :rel => "icon", :sizes => "16x16", :type => "image/png"}/
+    %link{:href => "/manifest.json", :rel => "manifest"}/
+    %link{:color => "#5bbad5", :href => "/safari-pinned-tab.svg", :rel => "mask-icon"}/
+    %meta{:content => "#ffffff", :name => "theme-color"}/
     %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}
+    %meta{:content => "yes", :name => "apple-mobile-web-app-capable"}
   %body
     %nav.navbar.navbar-default.navbar-fixed-top{:role => "navigation"}
       .navbar-header
