--- a/app/views/families/show.html.haml
+++ b/app/views/families/show.html.haml
@@ -30,7 +30,7 @@
         %tbody
           -@members.each do |user|
             %tr{id: "user-#{user.id}-row"}
-              %td= link_to user.name, user_path(user)
+              %td= link_to user.name, user_path(user), class: 'location'
               %td{style: "width:32px;"}
                 -if current_user.parent?
                   = link_to content_tag(:i,nil, class: "fa fa-remove fa-1x"), user_path(user), method: :delete, data: {confirm: t('are_you_sure')}, remote: true
