--- a/app/views/families/show.html.haml
+++ b/app/views/families/show.html.haml
@@ -10,7 +10,7 @@
         .pull-right
           -if current_user.parent?
             =link_to content_tag(:i, nil, class: "fa fa-cog fa-1x"), edit_family_path(@family), remote: true
-        = link_to t('blank_family', family: @family.name), family_path(@family), class: 'location'
+        = link_to t('blank_family', family: @family.name), "/family", class: 'location'
     .panel-body
       %table.table.table-hover
         %thead
@@ -30,7 +30,7 @@
         %tbody
           -@members.each do |user|
             %tr{id: "user-#{user.id}-row"}
-              %td= link_to user.name, user_path(user), class: 'location'
+              %td= link_to user.name, member_path(user), class: 'location'
               %td{style: "width:32px;"}
                 -if current_user.parent?
                   = link_to content_tag(:i,nil, class: "fa fa-remove fa-1x"), user_path(user), method: :delete, data: {confirm: t('are_you_sure')}, remote: true
