--- a/app/views/families/my_family.html.haml
+++ b/app/views/families/my_family.html.haml
@@ -19,7 +19,7 @@
     $('#id').val(x);
   }
 
-.panel.panel-default
+.panel.panel-default.portal-pics
   .panel-heading
     %h4= t('blank_family', family: @family.name)
   .panel-body{align: 'center'}
