--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -8,4 +8,4 @@
   %p
     .btn-group.btn-group-justified{style: 'width:200px;'}
       =link_to t('sign_in'), login_path, remote: true, class: "btn btn-primary"
-      =link_to t('sign_up'), signup_path, remote: true, class: "btn btn-success"
+      =link_to t('sign_up'), signup_path, class: "btn btn-success"
