--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -34,16 +34,20 @@
         -timezone = @user.timezone || "America/Los_Angeles"
         -ActiveSupport::TimeZone.us_zones.each do |zone|
           %option{:value => zone.tzinfo.name, :selected => (zone.tzinfo.name == timezone)}= zone.name
-  -if current_user
-    .form-group
-      %label.col-md-3.control-label= t('parent')
-      .col-md-9
-        .material-switch{style: 'padding:12px 0px 0px 12px;'}
-          %input{:name => "user[parent]", :type => "hidden", :value => 'off'}
-          %input#parent{:name => "user[parent]", :type => "checkbox", :checked => @user.parent}
-          %label.label-success{:for => "parent"}
-  -else
-    %input{:name => "user[parent]", :type => "hidden", :value => 'on'}
+  .form-group
+    %label.col-md-3.control-label= t('parent')
+    .col-md-9
+      .material-switch{style: 'padding:12px 0px 0px 12px;'}
+        %input{:name => "user[parent]", :type => "hidden", :value => 'off'}
+        %input#parent{:name => "user[parent]", :type => "checkbox", :checked => @user.parent, :onchange => "$('.notifications-group').toggle();"}
+        %label.label-success{:for => "parent"}
+  .form-group.notifications-group{style: "#{'display:none;' unless @user.parent}"}
+    %label.col-md-3.control-label{:for => "notifications"}= t('notifications')
+    .col-md-9
+      - ActiveSupport::TimeZone.us_zones
+      %select#notifications.form-control{:name => 'user[notifications]'}
+        -[[0,t("none")],[1,t("daily_report")]].each do |n|
+          %option{:value => n[0], :selected => (n[0] == @user.notifications)}= n[1]
   .form-group
     %label.col-md-3.control-label
     .col-md-9{align: 'right'}
