--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -160,3 +160,9 @@
   margin-left: -15px;
   margin-right: -15px;
 }
+
+.title-like {
+  text-transform: uppercase;
+  font-size: 18px;
+  text-decoration: none;
+}
