beginnings of activity feed, record instagram

--- a/app/views/families/show.html.haml
+++ b/app/views/families/show.html.haml
@@ -56,3 +56,9 @@
       .panel-heading
         %h4= t("activity")
       .panel-body
+        %table.table.table-hover
+          -@activities.reverse.each do |activity|
+            %tr
+              %td=SocialMedia::TYPE_NAME[activity.type_id]
+              %td=activity.user.name
+              %td=l(activity.posted_at, format: :medium)
