--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -27,6 +27,10 @@
       %input#pin.form-control{:type => "text", :name => 'user[pin]', :value => @user.pin}
       .text-muted= t('pin_info')
   .form-group
+    %label.col-md-3.control-label{:for => "dob"}= t('dob')
+    .col-md-9
+      %input#dob.form-control{:type => "date", :name => 'user[dob]', :value => (@user.dob || Time.now).strftime('%Y-%m-%d')}
+  .form-group
     %label.col-md-3.control-label{:for => "timezone"}= t('timezone')
     .col-md-9
       - ActiveSupport::TimeZone.us_zones
