--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -72,11 +72,40 @@
       -if @user.social_medium_stat
         .panel.panel-default
           .panel-heading
-            %h4= t("social_media_activity")
+            %h4= t("social_media_stats")
           .panel-body
             - @user.social_medium_stat.format_data.each do |k,v|
               = content_tag(:i, " #{k.titleize}", class: "fa fa-#{k} fa-2x")
               = column_chart v, height: "150px", colors: ["#325d88","#93c54b","#f47c3c"], library: {legend: {labels: {boxWidth: 12}}, scales: {yAxes: [{ticks: {stepSize: 1}}]}}
+      .panel.panel-default
+        .panel-heading
+          %h4= t("activity")
+        .panel-body
+          %ul.timeline
+            -right = false
+            -date = nil
+            -@activities.each do |activity|
+              -unless date == activity.date
+                %li.timeline-date
+                  .lable.label-success=l(activity.posted_at + Time.now.in_time_zone(activity.user.timezone).utc_offset, format: :short_dates)
+              %li{class: "#{'timeline-inverted' if right}"}
+                .timeline-badge
+                  =link_to content_tag(:i, nil, class: "fa fa-#{activity.css_class} fa-2x activity-post-link"), activity_post_link(activity), remote: true
+                .timeline-panel
+                  .timeline-heading
+                    %small.text-muted.pull-right{style: "padding-top:10px;"}
+                      %i.glyphicon.glyphicon-time
+                      =l(activity.posted_at + Time.now.in_time_zone(activity.user.timezone).utc_offset, format: :medium)
+                    %h4.timeline-title
+                      %a.location.title-like.visible-xs{href: member_path(activity.user), style: 'text-decoration:none;'}
+                        =image_tag(gravatar_for(activity.user), class: "img-rounded", size: "35x35")
+                      %a.location.title-like.hidden-xs{href: member_path(activity.user), style: 'text-decoration:none;'}
+                        =image_tag(gravatar_for(activity.user), class: "img-rounded", size: "35x35")
+                        =activity.user.name
+                  .timeline-body
+                    %p= activity.message
+              - right = !right
+              - date = activity.date
     -else
       .panel.panel-default
         .panel-heading
