--- a/app/views/social_medium/_activity.html.haml
+++ b/app/views/social_medium/_activity.html.haml
@@ -4,7 +4,8 @@
   -@activities.each do |activity|
     -unless date == activity.date
       %li.timeline-date
-        .lable.label-success=l(activity.posted_at + Time.now.in_time_zone(activity.user.timezone).utc_offset, format: :short_dates)
+        -date = activity.posted_at + Time.now.in_time_zone(activity.user.timezone).utc_offset
+        .label.label-success="#{t('days')[date.wday]} #{l(date, format: :short_dates)}"
     %li{class: "#{'timeline-inverted' if right}"}
       .timeline-badge
         =link_to content_tag(:i, nil, class: "fa fa-#{activity.css_class} fa-2x activity-post-link"), activity_post_link(activity), remote: true
@@ -12,7 +13,7 @@
         .timeline-heading
           %small.text-muted.pull-right{style: "padding-top:10px;"}
             %i.glyphicon.glyphicon-time
-            =l(activity.posted_at + Time.now.in_time_zone(activity.user.timezone).utc_offset, format: :medium)
+            =l(activity.posted_at + Time.now.in_time_zone(activity.user.timezone).utc_offset, format: :short_time)
           %h4.timeline-title
             %a.location.title-like.visible-xs{href: member_path(activity.user), style: 'text-decoration:none;'}
               =image_tag(gravatar_for(activity.user), class: "img-rounded", size: "35x35")
