--- a/app/views/families/show.html.haml
+++ b/app/views/families/show.html.haml
@@ -32,7 +32,7 @@
             %th= t('portal')
         %tbody
           %tr
-            %td{colspan: '2'}= link_to @family.url, @family.portal_url, target: :blank
+            %td{colspan: '2'}= link_to @family.url, "#{@family.portal_url}?token=#{current_user.get_token}", target: :blank
 
       %table.table.table-hover
         %thead
